ingress.yaml
````
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-dashboard
  namespace: monitoring
spec:
  rules:
    - host: grafana.<your domain>.<your tld>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  grafana
                port:
                  number: 80


````
